<resources>
    <string name="app_name">Curiosity Daily</string>
    <string name="title_home">推荐/关注帖子</string>
    <string name="title_design">设计壁纸、头像、动图</string>
    <string name="title_person">个人主页</string>
    <string name="tab_menu_design">设计</string>
    <string name="tab_menu_mine">我的</string>
    <string name="tab_menu_home">首页</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="action_settings">Settings</string>

    <string name="tab_mine_article">     账号操作</string>
    <string name="tab_mine_commendation">     我的发现</string>
    <string name="tab_mine_attention">     我的关注</string>
    <string name="tab_mine_feedback">     意见反馈</string>
    <string name="tab_mine_protocol">     用户协议</string>
    <string name="user_name">honey</string>
    <string name="user_phone">happy!</string>
    <string name="fragment_other">.      用户须知：
        好奇心日报APP主要有用户对文章的操作、对个人信息的操作以及对设计版块的操作。
        其中对文章的操作包含发布文章、点赞评论文章、关注其他用户等；
        对个人信息的操作包含修改和查看，以及系统消息；
        设计版块则包括对头像、壁纸的浏览和保存。</string>
    <string name="fragment_return">返回</string>
    <string name="mine_change">确认更改</string>
    <string name="mine_info_name">昵称</string>
    <string name="mine_info_sign">个签</string>
    <string name="tv_mine_info_head">头像</string>
    <string name="fragment_sub">提交</string>
    <string name="btn_exit">退出登录</string>
    <string name="btn_exit_app">重新注册</string>

</resources>
