<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray"
    tools:context=".view.MainActivity">
    <RelativeLayout
        android:id="@+id/ly_top_bar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/bg_topbar">
        <!--<TextView-->
            <!--android:id="@+id/txt_topbar"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="呵呵"-->
            <!--android:layout_centerInParent="true"-->
            <!--android:gravity="center"-->
            <!--android:textColor="@color/text_topbar"-->
            <!--android:textSize="18sp"/>-->
        <!--<View-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="2px"-->
            <!--android:layout_alignParentBottom="true"-->
            <!--android:background="@color/div_white"/>-->

    </RelativeLayout>
    <RadioGroup
        android:id="@+id/rg_tab_bar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:background="@color/bg_white"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/rb_home"
            style="@style/tab_menu_item"
            android:drawableTop="@drawable/tab_menu_home"
            android:text="@string/tab_menu_home"/>
        <RadioButton
            android:id="@+id/rb_design"
            style="@style/tab_menu_item"
            android:drawableTop="@drawable/tab_menu_design"
            android:text="@string/tab_menu_design"/>
        <RadioButton
            android:id="@+id/rb_mine"
            style="@style/tab_menu_item"
            android:drawableTop="@drawable/tab_menu_mine"
            android:text="@string/tab_menu_mine"/>

    </RadioGroup>
    <View
        android:id="@+id/div_tab_bar"
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_above="@id/rg_tab_bar"
        android:background="@color/div_white"/>
    <FrameLayout
        android:id="@+id/ly_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/div_tab_bar"
        android:layout_below="@id/ly_top_bar"></FrameLayout>

</RelativeLayout>