<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_white">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        >


        <ImageView
            android:id="@+id/iv_background"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/mine_background"
            tools:srcCompat="@drawable/mine_background" />

        <ImageButton
            android:id="@+id/ib_head"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_centerInParent="true"
            android:scaleType="fitXY"
            android:src="@drawable/mine_head"
            tools:src="@drawable/mine_head" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/iv_background"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp"
            >

            <ImageView
                android:id="@+id/iv_line"
                android:layout_width="1dp"
                android:layout_height="25dp"
                android:layout_marginStart="15dp"
                android:layout_centerHorizontal="true"
                android:background="@color/text_yellow"/>

            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@id/iv_line"
                android:textSize="17sp"
                android:textColor="@color/text_yellow"
                android:text="@string/user_name"/>

            <TextView
                android:id="@+id/user_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:textSize="17sp"
                android:textColor="@color/text_yellow"
                android:layout_toEndOf="@id/iv_line"
                android:text="@string/user_phone"/>

        </RelativeLayout>

    </RelativeLayout>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/rb_mine_article"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:button="@null"
                android:drawableStart="@drawable/ic_library_books_black_24dp"
                android:drawableEnd="@drawable/ic_keyboard_arrow_right_black_24dp"
                android:text="@string/tab_mine_article" />

            <Button
                android:id="@+id/rb_mine_commendation"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:button="@null"
                android:drawableStart="@drawable/ic_favorite_border_black_24dp"
                android:drawableEnd="@drawable/ic_keyboard_arrow_right_black_24dp"
                android:text="@string/tab_mine_commendation" />

            <Button
                android:id="@+id/rb_mine_attention"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:button="@null"
                android:drawableStart="@drawable/ic_account_circle_black_24dp"
                android:drawableEnd="@drawable/ic_keyboard_arrow_right_black_24dp"
                android:text="@string/tab_mine_attention" />

            <Button
                android:id="@+id/rb_mine_feedback"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:button="@null"
                android:drawableStart="@drawable/ic_announcement_black_24dp"
                android:drawableEnd="@drawable/ic_keyboard_arrow_right_black_24dp"
                android:text="@string/tab_mine_feedback" />

            <Button
                android:id="@+id/rb_mine_protocol"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:button="@null"
                android:drawableStart="@drawable/ic_account_balance_wallet_black_24dp"
                android:drawableEnd="@drawable/ic_keyboard_arrow_right_black_24dp"
                android:text="@string/tab_mine_protocol"
                />
            <!--RadoiButton变为Button
            <RadioButton
                android:id="@+id/rb_mine_protocol"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:button="@null"
                android:drawableStart="@drawable/ic_account_balance_wallet_black_24dp"
                android:drawableEnd="@drawable/ic_keyboard_arrow_right_black_24dp"
                android:text="@string/tab_mine_protocol"/>
            -->

        </LinearLayout>
    </RadioGroup>

    <!--
    <RadioGroup
        android:id="@+id/rg_tab_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/bg_white"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/rb_mine_article"
            style="@style/tab_menu_item"
            android:layout_width="400dp"
            android:layout_height="70dp"
            android:button="@null"
            android:checked="true"
            android:drawableStart="@android:drawable/btn_radio"
            android:paddingStart="10dp"

            android:drawableTop="@drawable/tab_mine_article"
            android:text="@string/tab_mine_article" />

        <RadioButton
            android:id="@+id/rb_mine_commendation"
            style="@style/tab_menu_item"
            android:layout_width="400dp"
            android:layout_height="70dp"
            android:drawableTop="@drawable/tab_menu_design"
            android:text="@string/tab_mine_commendation" />

        <RadioButton
            android:id="@+id/rb_mine_attention"
            style="@style/tab_menu_item"
            android:layout_width="400dp"
            android:layout_height="70dp"
            android:drawableTop="@drawable/tab_menu_design"
            android:text="@string/tab_mine_attention" />

        <RadioButton
            android:id="@+id/rb_mine_feedback"
            style="@style/tab_menu_item"
            android:layout_width="400dp"
            android:layout_height="70dp"
            android:drawableTop="@drawable/tab_menu_mine"
            android:text="@string/tab_mine_feedback" />

        <RadioButton
            android:id="@+id/rb_mine_protocol"
            style="@style/tab_menu_item"
            android:layout_width="400dp"
            android:layout_height="70dp"
            android:drawableTop="@drawable/tab_menu_mine"
            android:text="@string/tab_mine_protocol" />

    </RadioGroup>
-->


</LinearLayout>